9.aug (db)
      - limit templates to one measure (except leadsheet.mscx)
      - update Norwegian and Danish translations
8.aug (db)
      - Remove "prerelease" notice from splash screen
      - fix incorrect abbreviation for F Alto Ophicleide
      - update instruments_zh_TW.xml from benice 
      - update handbooks
2.aug (ws)
      - new menu entry: edit->delete-selected-measures; alternate method to
        delete measures
      - fix midi rendering of grace notes
      - fix staff when copy-paste chordnames
      - make cross staff movement of note undoable
1.aug (lv)
      - fix MusicXML import of page size, including recognizing the size
      (ws)
      - move dots with notehead when editing notehead position
      - fix edit mode for cross staff beams (wrong position of handles)
      (db)
      - Corrections to notation and dynamics in italian-1.mscx demo
31.jul (ws)
      - save measure number offset
30.jul (la)
      - force workingdir on first load of saveas and savecopy dialog
      - fix crash on removing staff when selected
      - force workingdir on save if new file
29.jul (ws)
      - reduce default reverb volume
      (db)
      - update all handbooks plus add Norwegian handbook
28.jul (la)
      - fix soundfont loading on mac PPC. Endianness problem.
      - fix note entry crash after changing measure duration
      - fix splitting of note and rest across barline on paste
      - fix invisible staff lines property
24.jul (la)
      - fix bug on pasting full measure rest
      - do not save format on save as anymore
      - fix crash on reset preferences to default
      (db)
      - add indent to first line of piano template
      - update Galician from Xosé
      - update all handbooks plus fixes to handbook scripts
22.jul (la)
      - Replace Ctrl by Alt for insertion of space, hyphen and underscore in lyrics on mac
      - MusicXML export enhancement. Patch by Raffaele Russi. (including: order in <note>