@@ -10,9 +10,6 @@
     <bracketDistance>0.3</bracketDistance>
     <measureSpacing>1.3</measureSpacing>
     <ledgerLineWidth>0.08</ledgerLineWidth>
-    <dotNoteDistance>0.5</dotNoteDistance>
-    <propertyDistanceHead>0.5</propertyDistanceHead>
-    <propertyDistance>0.25</propertyDistance>
     </Style>
   <showInvisible>1</showInvisible>
   <showFrames>1</showFrames>
