@@ -1,79 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<museScore version="1.9">
+<museScore version="1.11">
   <Mag>1</Mag>
   <xoff>0</xoff>
   <yoff>0</yoff>
   <Spatium>1.425</Spatium>
   <Division>480</Division>
   <Style>
-    <staffUpperBorder>7</staffUpperBorder>
-    <staffLowerBorder>7</staffLowerBorder>
-    <staffDistance>6.5</staffDistance>
     <akkoladeDistance>5.5</akkoladeDistance>
-    <systemDistance>9.25</systemDistance>
-    <lyricsDistance>2</lyricsDistance>
-    <lyricsMinBottomDistance>2</lyricsMinBottomDistance>
-    <systemFrameDistance>7</systemFrameDistance>
+    <systemDistance>9.2</systemDistance>
     <frameSystemDistance>7</frameSystemDistance>
-    <minMeasureWidth>4</minMeasureWidth>
-    <barWidth>0.16</barWidth>
-    <doubleBarWidth>0.16</doubleBarWidth>
-    <endBarWidth>0.3</endBarWidth>
-    <doubleBarDistance>0.3</doubleBarDistance>
-    <endBarDistance>0.3</endBarDistance>
-    <bracketWidth>0.35</bracketWidth>
     <bracketDistance>0.3</bracketDistance>
-    <clefLeftMargin>0.5</clefLeftMargin>
-    <keysigLeftMargin>0.5</keysigLeftMargin>
-    <timesigLeftMargin>0.5</timesigLeftMargin>
-    <clefKeyRightMargin>1.75</clefKeyRightMargin>
-    <stemWidth>0.13</stemWidth>
     <minNoteDistance>0.5</minNoteDistance>
     <measureSpacing>1.3</measureSpacing>
-    <barNoteDistance>1.5</barNoteDistance>
-    <noteBarDistance>1</noteBarDistance>
-    <staffLineWidth>0.08</staffLineWidth>
     <ledgerLineWidth>0.08</ledgerLineWidth>
-    <akkoladeWidth>1.6</akkoladeWidth>
-    <prefixDistance>0.13</prefixDistance>
-    <prefixNoteDistance>0.22</prefixNoteDistance>
-    <beamWidth>0.48</beamWidth>
-    <beamDistance>0.5</beamDistance>
-    <beamMinLen>1.25</beamMinLen>
-    <beamMinSlope>0.05</beamMinSlope>
-    <beamMaxSlope>0.2</beamMaxSlope>
-    <maxBeamTicks>480</maxBeamTicks>
-    <dotNoteDistance>0.5</dotNoteDistance>
-    <dotRestDistance>0.25</dotRestDistance>
-    <dotDotDistance>0.5</dotDotDistance>
-    <propertyDistanceHead>0.5</propertyDistanceHead>
-    <propertyDistanceStem>0.5</propertyDistanceStem>
-    <propertyDistance>0.25</propertyDistance>
     <pageFillLimit>0.7</pageFillLimit>
     <lastSystemFillLimit>0.1</lastSystemFillLimit>
-    <hairpinHeight>1.2</hairpinHeight>
-    <hairpinContHeight>0.5</hairpinContHeight>
-    <hairpinWidth>0.13</hairpinWidth>
-    <showPageNumber>1</showPageNumber>
-    <showPageNumberOne>0</showPageNumberOne>
-    <pageNumberOddEven>1</pageNumberOddEven>
-    <showMeasureNumber>1</showMeasureNumber>
-    <showMeasureNumberOne>0</showMeasureNumberOne>
-    <measureNumberInterval>5</measureNumberInterval>
-    <measureNumberAllStaffs>0</measureNumberAllStaffs>
-    <measureNumberSystem>1</measureNumberSystem>
+    <smallNoteMag>0.7</smallNoteMag>
     <graceNoteMag>0.7</graceNoteMag>
     <smallStaffMag>0.7</smallStaffMag>
-    <smallNoteMag>0.7</smallNoteMag>
-    <smallClefMag>0.8</smallClefMag>
     <genClef>0</genClef>
     <genKeysig>0</genKeysig>
-    <gateTime>85</gateTime>
-    <tenutoGateTime>100</tenutoGateTime>
-    <staccatoGateTime>50</staccatoGateTime>
-    <slurGateTime>100</slurGateTime>
     </Style>
   <showInvisible>1</showInvisible>
+  <showFrames>1</showFrames>
   <page-layout>
     <page-margins type="both">
       <left-margin>56.6929</left-margin>
@@ -103,6 +52,8 @@
     <trackName>Violin</trackName>
     <Instrument>
       <Channel name="normal">
+        <controller ctrl="0" value="0"/>
+        <controller ctrl="32" value="0"/>
         <program value="40"/>
         <controller ctrl="7" value="100"/>
         <controller ctrl="10" value="60"/>
@@ -119,164 +70,135 @@
         <nom1>4</nom1>
         </TimeSig>
       <Rest>
-        <ticklen>0</ticklen>
         </Rest>
       </Measure>
     <Measure number="2">
       <Rest>
-        <ticklen>0</ticklen>
         </Rest>
       </Measure>
     <Measure number="3">
       <Rest>
-        <ticklen>0</ticklen>
         </Rest>
       </Measure>
     <Measure number="4">
       <LayoutBreak>
         <subtype>line</subtype>
-        <track>-1</track>
         </LayoutBreak>
       <Rest>
-        <ticklen>0</ticklen>
         </Rest>
       </Measure>
     <Measure number="5">
       <Text>
         <subtype>MeasureNumber</subtype>
-        <track>-1</track>
+        <style>17</style>
         </Text>
       <Rest>
-        <ticklen>0</ticklen>
         </Rest>
       </Measure>
     <Measure number="6">
       <Rest>
-        <ticklen>0</ticklen>
         </Rest>
       </Measure>
     <Measure number="7">
       <Rest>
-        <ticklen>0</ticklen>
         </Rest>
       </Measure>
     <Measure number="8">
       <LayoutBreak>
         <subtype>line</subtype>
-        <track>-1</track>
         </LayoutBreak>
       <Rest>
-        <ticklen>0</ticklen>
         </Rest>
       </Measure>
     <Measure number="9">
       <Text>
         <subtype>MeasureNumber</subtype>
-        <track>-1</track>
+        <style>17</style>
         </Text>
       <Rest>
-        <ticklen>0</ticklen>
         </Rest>
       </Measure>
     <Measure number="10">
       <Rest>
-        <ticklen>0</ticklen>
         </Rest>
       </Measure>
     <Measure number="11">
       <Rest>
-        <ticklen>0</ticklen>
         </Rest>
       </Measure>
     <Measure number="12">
       <LayoutBreak>
         <subtype>line</subtype>
-        <track>-1</track>
         </LayoutBreak>
       <Rest>
-        <ticklen>0</ticklen>
         </Rest>
       </Measure>
     <Measure number="13">
       <Text>
         <subtype>MeasureNumber</subtype>
-        <track>-1</track>
+        <style>17</style>
         </Text>
       <Rest>
-        <ticklen>0</ticklen>
         </Rest>
       </Measure>
     <Measure number="14">
       <Rest>
-        <ticklen>0</ticklen>
         </Rest>
       </Measure>
     <Measure number="15">
       <Rest>
-        <ticklen>0</ticklen>
         </Rest>
       </Measure>
     <Measure number="16">
       <LayoutBreak>
         <subtype>line</subtype>
-        <track>-1</track>
         </LayoutBreak>
       <Rest>
-        <ticklen>0</ticklen>
         </Rest>
       </Measure>
     <Measure number="17">
       <Text>
         <subtype>MeasureNumber</subtype>
-        <track>-1</track>
+        <style>17</style>
         </Text>
       <Rest>
-        <ticklen>0</ticklen>
         </Rest>
       </Measure>
     <Measure number="18">
       <Rest>
-        <ticklen>0</ticklen>
         </Rest>
       </Measure>
     <Measure number="19">
       <Rest>
-        <ticklen>0</ticklen>
         </Rest>
       </Measure>
     <Measure number="20">
       <LayoutBreak>
         <subtype>line</subtype>
-        <track>-1</track>
         </LayoutBreak>
       <Rest>
-        <ticklen>0</ticklen>
         </Rest>
       </Measure>
     <Measure number="21">
       <Text>
         <subtype>MeasureNumber</subtype>
-        <track>-1</track>
+        <style>17</style>
         </Text>
       <Rest>
-        <ticklen>0</ticklen>
         </Rest>
       </Measure>
     <Measure number="22">
       <Rest>
-        <ticklen>0</ticklen>
         </Rest>
       </Measure>
     <Measure number="23">
       <Rest>
-        <ticklen>0</ticklen>
         </Rest>
       </Measure>
     <Measure number="24">
       <Rest>
-        <ticklen>0</ticklen>
         </Rest>
       </Measure>
     </Staff>
-  <cursorTrack>-1</cursorTrack>
+  <cursorTrack>0</cursorTrack>
   </museScore>
