@@ -1,6 +1,8 @@
 9.aug (db)
       - limit templates to one measure (except leadsheet.mscx)
-      - update Norwegian and Danish translations
+      - fix articulation distances in templates
+      - update Norwegian, Danish, and Arabic translations
+      - fix capitalization of menu items (US English)
 8.aug (db)
       - Remove "prerelease" notice from splash screen
       - fix incorrect abbreviation for F Alto Ophicleide
